--- a/ClientApp/src/app/modules/inward-material/inward-print/inward-print.component.html
+++ b/ClientApp/src/app/modules/inward-material/inward-print/inward-print.component.html
@@ -62,8 +62,8 @@
     padding: 7px;
     background: #f5f5f5;">
       <p style="margin:0; font-weight:500; font-size: 14px;">
-        Flat No 4, B Wing, Viththal Park, Samant Vadi, Near Ashok Stambh, Kashiba Medical Back side, Gangapur Road, Nashik - 422002.
-        <strong>Contact</strong>: 9867545678, 9867545678
+        {{inward.inwardAddressPrint}}
+        <strong>Contact</strong>: {{inward.inwardAddressPhoneNoPrint}}
       </p>
     </div>
   </div>
@@ -207,194 +207,7 @@
     </table>
   </main>
   <!--customer-copy-end-->
-  <hr style="page-break-after:always;">
-<!--office-copy-start-->
-
-<div class="clearfix" style=" page-break-after:before; padding: 0px 0;
-  margin-bottom: 10px;
-  border: 0px solid #ccc;
-  margin-top: 10px;">
-    <div id="logo" style=" text-align: center;
-    margin-bottom: 10px;">
-      <table style="background:transparent; margin-bottom:0; width: 100%;">
-        <tr>
-          <td style="padding:0; width: 50%; background: transparent">
-            <h4 style="font-weight: 700;
-            font-size: 2.375rem;
-            letter-spacing: 3px;
-            color: #1c0f3a;
-            margin: 0;
-            text-align: left;font-family: 'Poppins', sans-serif !important;">GOPAL</h4>
-            <p style="font-size: 0.875rem;
-            line-height: 7px;
-            letter-spacing: 0.406rem;
-            text-transform: uppercase;
-            position: relative;
-            left: 3px;
-            color: #FF4081;
-            font-weight: 600;
-            margin: 0 0 10px 0;
-            text-align: left;">Computers</p>
-          </td>
-          <td style="padding:0; background: transparent; width: 50%; text-align: right;">
-
-          <img style="
-            margin-right: 7px;" [src]="APIURL+'Uploads/'+inward.barCode" id="barCode" />
-
-          </td>
-        </tr>
-      </table>
-    </div>
-    <div class="address" style=" border-top: 1px solid #C1CED9;
-    border-bottom: 1px solid #C1CED9;
-    margin: 0 0 0px 0;
-    padding: 7px;
-    background: #f5f5f5;">
-      <p style="margin:0; font-weight:500; font-size: 14px;">
-        Flat No 4, B Wing, Viththal Park, Samant Vadi, Near Ashok Stambh, Kashiba Medical Back side, Gangapur Road, Nashik - 422002.
-        <strong>Contact</strong>: 9867545678, 9867545678
-      </p>
-    </div>
-  </div>
-  <main>
-    <table class="bill-table" style=" background: transparent;
-    margin-bottom: 0;
-    border: 1px solid #ccc;
-    width: 100%;
-    border-collapse: collapse;
-    border-spacing: 0;
-    margin-bottom: 20px;">
-      <thead>
-        <tr>
-          <th style="text-align:left;   background: #F5F5F5;
-          color: #000;
-          border-bottom: 1px solid #C1CED9;
-          font-size: 16px;
-          white-space: nowrap;
-          font-weight: 600;padding: 8px 10px !important;">Inward Slip</th>
-          <th style="text-align:right;  background: #F5F5F5;
-          color: #000;
-          border-bottom: 1px solid #C1CED9;
-          font-size: 16px;
-          white-space: nowrap;
-          font-weight: 600;padding: 8px 10px !important;">Office Copy</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td style=" padding: 7px;
-          background: transparent;
-          font-size: 13px;
-          line-height: 27px; vertical-align: top;">
-            <div id="project" style=" float: left;">
-              <div style=" white-space: nowrap;color: #605c5c; font-weight: 500;"><span style=" color: #000;
-                text-align: left;
-                width: 160px;
-                margin-right: 10px;
-                display: inline-block;
-                font-weight: 600;">Job Number</span>: {{inward.inwardId}}</div>
-              <div style=" white-space: nowrap;color: #605c5c; font-weight: 500;"><span style=" color: #000;
-                text-align: left;
-                width: 160px;
-                margin-right: 10px;
-                display: inline-block;
-                font-weight: 600;">Inward Date</span>: {{inward.inwardDate | date:'dd/MM/yyyy'}}</div>
-              <div style=" white-space: nowrap;color: #605c5c; font-weight: 500;"><span style=" color: #000;
-                text-align: left;
-                width: 160px;
-                margin-right: 10px;
-                display: inline-block;
-                font-weight: 600;">Client Name</span>: {{inward.clientName}}</div>
-              <div style=" white-space: nowrap;color: #605c5c; font-weight: 500;"><span style=" color: #000;
-                text-align: left;
-                width: 160px;
-                margin-right: 10px;
-                display: inline-block;
-                font-weight: 600;">Client Phone #</span>: {{inward.mobileNumber}}</div>
-              <div style=" white-space: nowrap;color: #605c5c; font-weight: 500;"><span style=" color: #000;
-                text-align: left;
-                width: 160px;
-                margin-right: 10px;
-                display: inline-block;
-                font-weight: 600;">Material Name</span>: {{inward.modelNo}}, {{inward.materialType}}, {{inward.companyName}}</div>
-              <div style=" white-space: nowrap;color: #605c5c; font-weight: 500;"><span style=" color: #000;
-                text-align: left;
-                width: 160px;
-                margin-right: 10px;
-                display: inline-block;
-                font-weight: 600;">Accessories Recieved</span>: {{inward.accessories != '' ? 'YES' : 'NO'}}</div>
-              <div style=" white-space: nowrap;color: #605c5c; font-weight: 500;"><span style=" color: #000;
-                text-align: left;
-                width: 160px;
-                margin-right: 10px;
-                display: inline-block;
-                font-weight: 600;">Serial No</span>: {{inward.serialNo}}</div>
-              <div style=" white-space: nowrap;color: #605c5c; font-weight: 500;"><span style=" color: #000;
-                text-align: left;
-                width: 160px;
-                margin-right: 10px;
-                display: inline-block;
-                font-weight: 600;">Problem Description</span>: {{inward.problemDescription}}</div>
-              <div style=" white-space: nowrap;color: #605c5c; font-weight: 500;"><span style=" color: #000;
-                text-align: left;
-                width: 160px;
-                margin-right: 10px;
-                display: inline-block;
-                font-weight: 600;">Engg. Name</span>: {{inward.enggName}}</div>
-              <div style=" white-space: nowrap;color: #605c5c; font-weight: 500;"><span style=" color: #000;
-                text-align: left;
-                width: 160px;
-                margin-right: 10px;
-                display: inline-block;
-                font-weight: 600;">Problem Detected</span>: {{inward.isProblemDetected == '1' ? 'YES' : 'NO'}}</div>
-              <div style=" white-space: nowrap;color: #605c5c; font-weight: 500;"><span style=" color: #000;
-                text-align: left;
-                width: 160px;
-                margin-right: 10px;
-                display: inline-block;
-                font-weight: 600;">Advanced Amount</span>: {{inward.advanceAmount}}/-</div>
-            </div>
-          </td>
-          <td style=" padding: 7px;
-          background: transparent;
-          font-size: 13px;
-          line-height: 27px; vertical-align: top;">
-            <div id="project" class="clearfix" style="   float: right;
-            text-align: right;">
-              <div style=" white-space: nowrap;color: #605c5c; font-weight: 500;"><span style="  color: #000;
-                text-align: right;
-                width: 160px;
-                margin-right: 10px;
-                display: inline-block;
-                font-weight: 600;">Delivery Date</span>: {{inward.deliveryDate | date:'dd/MM/yyyy'}}</div>
-              <div style=" white-space: nowrap;color: #605c5c; font-weight: 500;"><span style="  color: #000;
-                text-align: right;
-                width: 160px;
-                margin-right: 10px;
-                display: inline-block;
-                font-weight: 600;">Est. Labour Charges</span>: {{inward.estmRepairingAmount}}/-</div>
-
-            </div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-    <div id="notices">
-      <div><strong>NOTICE:</strong></div>
-      <ul style="  padding: 0 13px;margin: 5px;">
-        <li style="font-size: 13px;">A finance charge of 1.5% will be made on unpaid balances after 30 days.</li>
-      </ul>
-    </div>
-    <table style="margin-top:60px; margin-bottom:30px; width: 100%">
-      <tr>
-        <td style="padding:7px; text-align:left;font-size: 13px;">
-          <strong>Customer Signature</strong>
-        <td style="padding:0; text-align:right;font-size: 13px;">
-          <strong>Authorized Signature</strong>
-        </td>
-      </tr>
-    </table>
-  </main>
+ 
 </body>
 </html>
 <div style="text-align: center; padding-bottom: 15px;">
