--- a/ClientApp/src/app/modules/inward-material/outward-print/outward-print.component.html
+++ b/ClientApp/src/app/modules/inward-material/outward-print/outward-print.component.html
@@ -179,33 +179,6 @@
           <td style="padding: 5px 5px;
           background: transparent;
           font-size: 12px;
-          line-height: 18px; vertical-align: top; text-align:left; border:0"></td>
-          <td style="padding: 5px 5px;
-          background: transparent;
-          font-size: 12px;
-          line-height: 18px; vertical-align: top; text-align:left;">
-            <strong>Outstanding ₹</strong>
-          </td>
-          <td style="padding: 5px 5px;
-          background: transparent;
-          font-size: 12px;
-          line-height: 18px; vertical-align: top; text-align:right;">
-            {{outward.outstandingAmount}} /-
-          </td>
-        </tr>
-        <tr>
-          <td style="padding: 5px 5px;
-          background: transparent;
-          font-size: 12px;
-          line-height: 18px; vertical-align: top; text-align:left; border:0"></td>
-          <td style="padding: 5px 5px;
-          background: transparent;
-          font-size: 12px;
-          line-height: 18px; vertical-align: top; text-align:left;border:0"></td>
-
-          <td style="padding: 5px 5px;
-          background: transparent;
-          font-size: 12px;
           line-height: 18px; vertical-align: top; text-align:left;border:0"></td>
           <td style="padding: 5px 5px;
           background: transparent;
@@ -224,7 +197,7 @@
           <td style="padding: 5px 5px;
           background: transparent;
           font-size: 12px;
-          line-height: 18px; vertical-align: top; text-align:left;border:0"></td>
+          line-height: 18px; vertical-align: top; text-align:left; border:0"></td>
           <td style="padding: 5px 5px;
           background: transparent;
           font-size: 12px;
@@ -233,20 +206,22 @@
           <td style="padding: 5px 5px;
           background: transparent;
           font-size: 12px;
-          line-height: 18px; vertical-align: top; text-align:left;border:0"></td>
+          line-height: 18px; vertical-align: top; text-align:left; border:0"></td>
           <td style="padding: 5px 5px;
           background: transparent;
           font-size: 12px;
           line-height: 18px; vertical-align: top; text-align:left;">
-            <strong>Total ₹</strong>
+            <strong>Outstanding ₹</strong>
           </td>
           <td style="padding: 5px 5px;
           background: transparent;
           font-size: 12px;
           line-height: 18px; vertical-align: top; text-align:right;">
-            {{getTotalSum()}} /-
+            {{outward.outstandingAmount}} /-
           </td>
         </tr>
+
+
       </tfoot>
     </table>
     <div id="notices">
@@ -268,15 +243,15 @@
     <p style="padding: 0;
           background: transparent;
           font-size: 12px;
-          line-height: 18px; vertical-align: top; margin:0; text-align:left"><strong>Bank A/C:</strong> 1234567</p>
+          line-height: 18px; vertical-align: top; margin:0; text-align:left"><strong>Bank A/C:</strong> {{outward.bankAccountNoPrint}}</p>
     <p style="padding: 0;
           background: transparent;
           font-size: 12px;
-          line-height: 18px; vertical-align: top;margin:0; text-align:left"><strong>IFSC Code:</strong> ABCD1234</p>
+          line-height: 18px; vertical-align: top;margin:0; text-align:left"><strong>IFSC Code:</strong> {{outward.ifscCodePrint}}</p>
     <p style="padding: 0;
           background: transparent;
           font-size: 12px;
-          line-height: 18px; vertical-align: top;margin:0; text-align:left"><strong>Gpay:</strong> 9999999999</p>
+          line-height: 18px; vertical-align: top;margin:0; text-align:left"><strong>Gpay:</strong> {{outward.gPayPrint}}</p>
   </main>
 
 
