--- a/Views/PDF/PrintInward.cshtml
+++ b/Views/PDF/PrintInward.cshtml
@@ -70,8 +70,8 @@
     padding: 7px;
     background: #f5f5f5;">
             <p style="margin:0; font-weight:500; font-size: 14px;">
-                Flat No 4, B Wing, Viththal Park, Samant Vadi, Near Ashok Stambh, Kashiba Medical Back side, Gangapur Road, Nashik - 422002.
-                <strong>Contact</strong>: 9867545678, 9867545678
+                @Model.inwardAddressPrint
+                <strong>Contact</strong>: @Model.inwardAddressPhoneNoPrint
             </p>
         </div>
     </div>
